# GMDM

./: .gitignore  CMakeLists.txt  README.md  build_debug.sh  build_release.sh  clean.sh  main_figure6.cpp  main_plot_figure6.py  run.sh
include/gmdm/: GMDM.hpp
src/gmdm/: GMDM.cpp
